# pure-intellect

./: .gitignore  AGENT_MEMO.md  LICENSE  README.md  RESEARCH_NOTES.md  az_plugin_config.yaml  config.yaml  install.bat  install.sh  pyproject.toml  start.bat  start_daemon.py
.github/: FUNDING.yml
benchmarks/: __init__.py  reporter.py  runner.py  scenarios.py
docs/: CTX_BOOK.md  CTX_MODULE_ARCHITECTURE.md  DEAD_CODE_AUDIT.md  HANDOFF.md  api_reference.md  architecture.md  installation.md
src/contextor/: __main__.py  config.py  server.py
src/contextor/api/: __init__.py  chat.py  memory_api.py  models_api.py  routes.py  schemas.py  session.py  state.py  system.py  websocket.py
src/contextor/core/: __init__.py  archive.py  assembler.py  card_generator.py  code_memory.py  dual_model.py  graph.py  intent.py  orchestrator.py  retriever.py  session.py  session_manager.py  summarizer.py  utility_worker.py  watcher.py  watcher_integration.py
src/contextor/engine/: __init__.py  model_manager.py  registry.py
src/contextor/engines/: __init__.py  base.py  config_loader.py  ollama.py  provider.py
src/contextor/parsers/: __init__.py  base.py
src/contextor/static/: index.html
src/contextor/utils/: hardware_detector.py  hashing.py  logger.py  swap_manager.py  tokenizer.py
src/pure_intellect/: __main__.py  config.py  server.py
src/pure_intellect/api/: routes.py  schemas.py  websocket.py
src/pure_intellect/core/: __init__.py  archive.py  assembler.py  code_module.py  dual_model.py  graph.py  graph_builder.py  intent.py  orchestrator.py  retriever.py  session.py  session_manager.py  summarizer.py  utility_worker.py  watcher.py
tests/: test_assembler.py  test_cci.py  test_code_memory.py  test_code_module.py  test_config.py  test_dual_model.py  test_f3_adaptive_reset.py  test_hardware_detector.py  test_intent.py  test_live_memory.py  test_memory.py  test_meta_coordinator.py  test_model_manager.py  test_openai_endpoint.py  test_optimizer.py  test_orchestrator.py  test_r3_memory_pressure.py  test_scorer.py  test_session.py  test_session_manager.py  test_system_full.py  test_tagger.py  test_watcher_c2.py
(+34 files in other folders)
