[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-intellect"
version = "0.1.0"
description = "Локальный оркестратор для LLM с иерархической памятью и управлением контекстом"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Remchik64"},
]
keywords = ["llm", "orchestrator", "rag", "local-ai", "context-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.21.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "chromadb>=0.5.0",
    "networkx>=3.4.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "watchdog>=6.0.0",
    "tiktoken>=0.8.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.20.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
cuda = [
    "llama-cpp-python[cuda]>=0.3.0",
]

[project.scripts]
pure-intellect = "pure_intellect.__main__:main"

[project.urls]
Homepage = "https://github.com/Remchik64/pure-intellect"
Repository = "https://github.com/Remchik64/pure-intellect"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
